--- a/src/app/pages/main-view/main-view.component.html
+++ b/src/app/pages/main-view/main-view.component.html
@@ -1,3 +1,11 @@
+
+    <mat-label>Choose a date</mat-label>
+    <input matInput [matDatepicker]="picker">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+
+<!-- 
+
 <div class="root">
 
     <div *ngIf="isShown" class="new-task-window-root">
@@ -13,12 +21,12 @@
 
                 <br /><br /><br />
 
-                <!-- <mat-form-field appearance="standard"> -->
+                <mat-form-field appearance="standard">
                     <mat-label>Choose a date</mat-label>
                     <input matInput [matDatepicker]="picker">
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
-                <!-- </mat-form-field> -->
+                </mat-form-field>
 
                 
 
@@ -88,3 +96,4 @@
 
     </div>
 </div>
+-->
