--- a/src/app/pages/main-view/main-view.component.scss
+++ b/src/app/pages/main-view/main-view.component.scss
@@ -1,3 +1,4 @@
+/*
 .root {
     display: flex;
     flex-direction: column;
@@ -180,3 +181,4 @@
   .example-month-picker .mat-calendar-arrow {
     display: none;
   }
+  */
