--- a/src/main-styles.scss
+++ b/src/main-styles.scss
@@ -16,8 +16,8 @@ html, body {
 }
 
 html {
-    background-image: url("./assets/background.svg");
-    background-size: cover;
+    //background-image: url("./assets/background.svg");
+    //background-size: cover;
 
-    overflow-y: auto !important;
+    //overflow-y: auto !important;
 }
